--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,7 @@ block content
     div.container_login
         div.page_hero
             h1.titles Connexion/ Inscription
-            form(action="login" method="POST")
+            form(action="/login" method="POST")
                 div.input
                     input(type="mail" placeholder="john.doe@gmail.com")
                 div.input
