Flash session added

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,22 @@
+/* *************************************************************************************************************************** */
+/* ******************************************************* GLOBAL **************************************************************/
+/* *************************************************************************************************************************** */
+.error {
+    font-size: 18px;
+    padding: 20px;
+    /* font-weight: bold; */
+    background-color: #f44242;
+    color: white;
+    border: 1px solid grey;
+}
+.success {
+    font-size: 18px;
+    padding: 20px;
+    /* font-weight: bold; */
+    background-color: #00b309;
+    color: white;
+    border: 1px solid rgb(128, 128, 128);
+}
 body {
     max-width: 1024px;
     width: 100%;
@@ -46,6 +65,9 @@ body {
     color: black;
     text-transform: uppercase;
 }
+/* ****************************************************************************************** */
+/* ********************************* FORM ****************************************************/
+/* ****************************************************************************************** */
 
 form button[type="submit"] {
     background-color: white;
@@ -61,7 +83,9 @@ form button[type="submit"]:hover  {
     background-color: black;
     color: white;
 }
-/* LOGIN */
+/* *************************************************************************************************************************** */
+/* ******************************************************* LOGIN ***************************************************************/
+/* *************************************************************************************************************************** */
 .container_login form{
     max-width: 400px;
     width: 100%;
@@ -88,7 +112,9 @@ form button[type="submit"]:hover  {
     outline: none;
     font-size: 18px;
 }
-/* register */
+/* *************************************************************************************************************************** */
+/* ******************************************************* REGISTER ************************************************************/
+/* *************************************************************************************************************************** */
 .container_register form{
     max-width: 400px;
     width: 100%;
@@ -104,14 +130,4 @@ form button[type="submit"]:hover  {
 }
 .container_register form > * {
     padding-bottom: 40px;
-}
-
-/* errors */
-.error {
-    font-size: 18px;
-    padding: 20px;
-    /* font-weight: bold; */
-    background-color: #f44242;
-    color: white;
-    border: 1px solid grey;
 }
