--- a/views/master.pug
+++ b/views/master.pug
@@ -20,6 +20,11 @@ html(lang="en")
                         a(href="/login") Connexion
                     div.btn
                         a(href="/register") Inscription
+        each val, key in flashMessages
+            if key == 'success'
+                p.success #{val}
+            else
+                p.error #{val}
         main
             block content
             
