--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,13 @@
 /* *************************************************************************************************************************** */
 /* ******************************************************* GLOBAL **************************************************************/
 /* *************************************************************************************************************************** */
+.user_connected {
+    display: inline-block;
+    padding-left: 10px;
+}
+.user_connected_info {
+    font-weight: bold;
+}
 .error {
     font-size: 18px;
     padding: 20px;
